# mx

./: CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: 00-architecture-overview.md  02-preview-pipeline.md  03-file-operations.md  05-ui-layout.md  06-auto-update.md  07-release-pipeline.md  journal-auto-update.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
web/: index.html  package-lock.json  package.json
web/src/: main.ts  styles.css
