[package]
name = "mx"
version = "0.4.0"
description = "Fast, lightweight markdown editor for the AI era"
authors = ["Tony@Vibery Studio"]
edition = "2024"

[lib]
name = "mx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
